--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <h1>Styles Conference</h1>
-        <p>What a piece of work is man, how noble in reason, how infinite in faculty, in form and moving, how express and admirable, in action how like an angel, in apprehension how like a god! The beauty of the world! The paragon of animals!</p>
+        <header>
+            <h1>Styles Conference</h1>
+            <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+        <section>
+            <h2>Hamlet</h2>
+            <p>What a piece of work is man, how noble in reason, how infinite in faculty, in form and moving, how express and admirable, in action how like an angel, in apprehension how like a god! The beauty of the world! The paragon of animals!</p>
+        </section>
+        </header>
     </body>
 </html>
