deletion of about

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                 <h3>The Chicago Theatre</h3>
                 <p>Within the heart of downtown Chicago, The Chicago Theatre will proivide a beautiful conference venue.</p>
             </section>
-            <small>&copy;Styles Conference</small>
+            <footer>
+                <small>&copy;Styles Conference</small>
+            </footer>
+        
         </section>
     </body>
 </html>
