--- a/index.html
+++ b/index.html
@@ -7,34 +7,58 @@
     </head>
     <body>
         <header>
-            <h1>Styles Conference</h1>
+            <h1>
+                <a href="index.html">Styles Conference</a>
+
+            </h1>
             <h3>August 24&ndash;26th&mdash; Chicago, IL</h3>
         <section>
             <h2>Hamlet</h2>
             <p>"What a piece of work is man, how noble in reason, how infinite in faculty, in form and moving, how express and admirable, in action how like an angel, in apprehension how like a god! The beauty of the world! The paragon of animals!"</p>
+            <a href="register.html">Register Now</a>
         </section>
+         <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+         </nav>
         </header>
 
         <section>
             <section>
+             <a href="speakers.html">
                 <h5>Speakers</h5>
                 <h3>World Class Speakers</h3>
+             </a>
                 <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
             </section>
 
             <section>
+                <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Three Inspiring Days</h3>
+                </a>
                 <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
             </section>
 
             <section>
+                <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>The Chicago Theatre</h3>
+                </a>
                 <p>Within the heart of downtown Chicago, The Chicago Theatre will proivide a beautiful conference venue.</p>
             </section>
             <footer>
                 <small>&copy;Styles Conference</small>
+                 <nav>
+                    <a href="index.html">Home</a>
+                    <a href="speakers.html">Speakers</a>
+                    <a href="schedule.html">Schedule</a>
+                    <a href="venue.html">Venue</a>
+                    <a href="register.html">Register</a>
+                 </nav>
             </footer>
         
         </section>
