--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <header>
+        <header class="container">
+            <section class="container">
+                <a class="btn btn-alt">
             <h1>
                 <a href="index.html">Styles Conference</a>
 
             </h1>
+                </a>
+            </section>
             <h3>August 24&ndash;26th&mdash; Chicago, IL</h3>
-        <section>
+        <section class="container">
             <h2>Hamlet</h2>
             <p>"What a piece of work is man, how noble in reason, how infinite in faculty, in form and moving, how express and admirable, in action how like an angel, in apprehension how like a god! The beauty of the world! The paragon of animals!"</p>
             <a href="register.html">Register Now</a>
@@ -26,7 +30,7 @@
          </nav>
         </header>
 
-        <section>
+        <section class="container">
             <section>
              <a href="speakers.html">
                 <h5>Speakers</h5>
@@ -35,7 +39,7 @@
                 <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
             </section>
 
-            <section>
+            <section class="container">
                 <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Three Inspiring Days</h3>
@@ -43,14 +47,14 @@
                 <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
             </section>
 
-            <section>
+            <section class="container">
                 <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>The Chicago Theatre</h3>
                 </a>
                 <p>Within the heart of downtown Chicago, The Chicago Theatre will proivide a beautiful conference venue.</p>
             </section>
-            <footer>
+            <footer class="container">
                 <small>&copy;Styles Conference</small>
                  <nav>
                     <a href="index.html">Home</a>
