--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <header class="container">
-            <h1>
-                <a href="index.html">Styles Conference</a>
+        <header class="container group">
+            ::before
+            <h1 class="logo">
+                <a href="index.html">
+                    Styles 
+                    <br>
+                    Conference
+                </a>
             </h1>
             <h3>August 24&ndash;26th&mdash; Chicago, IL</h3>
          <nav>
@@ -18,21 +23,23 @@
             <a href="venue.html">Venue</a>
             <a href="register.html">Register</a>
          </nav>
+            ::after
         </header>
         <section class="hero container">
-            <h2>Hamlet</h2>
-            <p>"What a piece of work is man, how noble in reason, how infinite in faculty, in form and moving, how express and admirable, in action how like an angel, in apprehension how like a god! The beauty of the world! The paragon of animals!"</p>
+            <h2>Dedicated to the craft of building websites</h2>
+            <p>"Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!"</p>
             <a class="btn btn-alt"href="register.html">Register Now</a>
         </section>
         <section class="container">
-            <section>
+            <section class="grid">
+            <section class="col-1-3">
              <a href="speakers.html">
                 <h5>Speakers</h5>
                 <h3>World Class Speakers</h3>
              </a>
                 <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
             </section>
-            <section>
+            <section class="col-1-3">
                 <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Three Inspiring Days</h3>
@@ -40,7 +47,7 @@
                 <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
             </section>
 
-            <section>
+            <section class="col-1-3">
                 <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>The Chicago Theatre</h3>
@@ -48,7 +55,8 @@
                 <p>Within the heart of downtown Chicago, The Chicago Theatre will proivide a beautiful conference venue.</p>
             </section>
         </section>
-            <footer class="container">
+            <footer class="primary-footer container group">
+                ::before
                 <small>&copy;Styles Conference</small>
                  <nav>
                     <a href="index.html">Home</a>
@@ -57,6 +65,7 @@
                     <a href="venue.html">Venue</a>
                     <a href="register.html">Register</a>
                  </nav>
+                 ::after
             </footer>       
     </body>
 </html>
