--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </section>
 
     <!-- Teasers -->
-
-    <section class="grid">
+<section class="row">
+    <div class="grid">
 
       <!-- Speakers -->
 
@@ -75,7 +75,7 @@
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
       </section>
-
+      </div>
     </section>
 
     <!-- Footer -->
