--- a/register.html
+++ b/register.html
@@ -31,10 +31,12 @@
 
     <!-- Main content -->
 
-    <section class="container">
+    <section class="row-alt">
+      <div class="lead container">
 
       <h1>Register</h1>
-
+      <p>Register now!</p>
+      </div>
     </section>
 
     <!-- Footer -->
