--- a/schedule.html
+++ b/schedule.html
@@ -31,10 +31,12 @@
 
     <!-- Main content -->
 
-    <section class="container">
+    <section class="row-alt">
+      <div class="lead container">
 
       <h1>Schedule</h1>
-
+      <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+     </div>
     </section>
 
     <!-- Footer -->
