--- a/venue.html
+++ b/venue.html
@@ -31,10 +31,11 @@
 
     <!-- Main content -->
 
-    <section class="container">
-
+    <section class="row-alt">
+      <div class="lead container">
       <h1>Venue</h1>
-
+      <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+      </div>
     </section>
 
     <!-- Footer -->
