--- a/adding-media/register.html
+++ b/adding-media/register.html
@@ -3,21 +3,22 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Schedule - Styles Conference</title>
+    <title>Register - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
 
     <!-- Header -->
 
-    <header class="container group">
+    <header class="primary-header container group">
 
       <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
         <ul>
@@ -31,14 +32,16 @@
 
     </header>
 
-    <!-- Main content -->
+    <!-- Lead -->
 
     <section class="row-alt">
       <div class="lead container">
 
-      <h1>Schedule</h1>
-      <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-     </div>
+        <h1>Register</h1>
+
+        <p>Every year we aim to have an unbelievable time, and this year we&#8217;d love it for you to join us. Conference passes only cost $99, one of the best values you&#8217;ll find.</p>
+
+      </div>
     </section>
 
     <!-- Footer -->
@@ -47,7 +50,7 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav class="nav primary-nav">
+      <nav class="nav">
         <ul>
           <li><a href="index.html">Home</a></li><!--
           --><li><a href="speakers.html">Speakers</a></li><!--
